# catkin_workspace

./: .gitignore  .gitmodules  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
Ignore/: CMakeLists.txt  package.xml
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/onrobot_rg_control/: OnRobotRGDualServer.py  OnRobotRGSimpleController.py  OnRobotRGStatusDualListener.py  OnRobotRGStatusListener.py
devel/lib/onrobot_vg_control/: OnRobotVGSimpleController.py  OnRobotVGSimpleControllerServer.py  OnRobotVGStatusListener.py  OnRobotVGTcpNode.py
devel/lib/pkgconfig/: moveit_msgs.pc  onrobot_rg_control.pc  onrobot_rg_description.pc  onrobot_rg_gazebo.pc  onrobot_rg_modbus_tcp.pc  onrobot_vg_control.pc  onrobot_vg_description.pc  onrobot_vg_modbus_tcp.pc  roboticsgroup_upatras_gazebo_plugins.pc  ros_tcp_endpoint.pc  ur10_moveit_config.pc  ur10e_moveit_config.pc  ur10e_rg2.pc  ur10e_rg2_moveit.pc  ur16e_moveit_config.pc  ur20_moveit_config.pc  ur30_moveit_config.pc  ur3_moveit_config.pc  ur3e_moveit_config.pc  ur5_moveit_config.pc  ur5e_moveit_config.pc  ur_description.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc
devel/share/moveit_msgs/cmake/: moveit_msgs-msg-extras.cmake  moveit_msgs-msg-paths.cmake  moveit_msgsConfig.cmake
devel/share/onrobot_rg_control/cmake/: onrobot_rg_control-msg-extras.cmake  onrobot_rg_control-msg-paths.cmake  onrobot_rg_controlConfig.cmake
devel/share/onrobot_rg_description/cmake/: onrobot_rg_descriptionConfig.cmake
devel/share/onrobot_rg_gazebo/cmake/: onrobot_rg_gazeboConfig.cmake
devel/share/onrobot_rg_modbus_tcp/cmake/: onrobot_rg_modbus_tcpConfig.cmake
devel/share/onrobot_vg_control/cmake/: onrobot_vg_control-msg-paths.cmake  onrobot_vg_controlConfig.cmake
devel/share/onrobot_vg_description/cmake/: onrobot_vg_descriptionConfig.cmake
logs/stomp/: build.cmake.000.log.stderr  build.loadenv.001.log.stderr
logs/stomp_moveit/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr
logs/ur20_moveit_config/: build.check.002.log.stderr
src/: .rosinstall  .rosinstall.bak  add_submodules.sh  update_modules.sh
src/ur10e_rg2/ur10e_rg2_description/: ur10e_rg2.urdf
src/ur10e_rg2_moveit/: .setup_assistant  CMakeLists.txt  package.xml  ur10e_rg2.srdf
src/ur10e_rg2_moveit/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur10e_rg2.srdf
src/ur10e_rg2_moveit/launch/: demo.launch  gazebo.launch  move_group.launch  moveit.rviz  part_2.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
src/ur10e_rg2_moveit/script/: mover.py  trajectory_subscriber.py
src/ur10e_rg2_moveit/scripts/: mover.py  sim_real_pnp.py  trajectory_subscriber.py
src/ur10e_rg2_moveit/srv/: MoverService.srv
(+36 files in other folders)
